--- a/kubernetes/apps/downloads/coder/app/externalsecret.yaml
+++ b/kubernetes/apps/downloads/coder/app/externalsecret.yaml
@@ -9,17 +9,17 @@ spec:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: coder-secrets
+    name: coder-secret
     template:
       data:
         ssh-privkey: "{{ .ssh_privkey }}"
         ssh-pubkey: "{{ .ssh_pubkey }}"
         age.agekey: "{{ .agekey }}"
   dataFrom:
-    - extract:
-        key: coder
-    - extract:
-        key: volsync-template
+  - extract:
+      key: coder
+  - extract:
+      key: volsync-template
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
 apiVersion: external-secrets.io/v1
@@ -31,7 +31,7 @@ spec:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: coder-secrets-env
+    name: coder-secret-env
     template:
       data:
         RESTIC_PASSWORD: "{{ .RESTIC_PASSWORD }}"
@@ -39,7 +39,7 @@ spec:
         AWS_ACCESS_KEY_ID: "{{ .CLOUDFLARE_AWS_ACCESS_KEY_ID }}"
         AWS_SECRET_ACCESS_KEY: "{{ .CLOUDFLARE_AWS_SECRET_ACCESS_KEY }}"
   dataFrom:
-    - extract:
-        key: coder
-    - extract:
-        key: volsync-template
+  - extract:
+      key: coder
+  - extract:
+      key: volsync-template
