Add more secret

--- a/kubernetes/apps/downloads/coder/app/externalsecret.yaml
+++ b/kubernetes/apps/downloads/coder/app/externalsecret.yaml
@@ -38,8 +38,13 @@ spec:
         RESTIC_REPOSITORY: s3:https://{{ .CLOUDFLARE_RESTIC_REPO }}/${CLUSTER_NAME}/pvcs/${NAMESPACE}/${APP}
         AWS_ACCESS_KEY_ID: "{{ .CLOUDFLARE_AWS_ACCESS_KEY_ID }}"
         AWS_SECRET_ACCESS_KEY: "{{ .CLOUDFLARE_AWS_SECRET_ACCESS_KEY }}"
+        CLOUDFLARE_AWS_ACCESS_KEY_ID: "{{ .CLOUDFLARE_AWS_ACCESS_KEY_ID }}"
+        CLOUDFLARE_AWS_SECRET_ACCESS_KEY: "{{ .CLOUDFLARE_AWS_SECRET_ACCESS_KEY }}"
+        CLOUDFLARE_RESTIC_REPO: "{{ .CLOUDFLARE_RESTIC_REPO }}"
   dataFrom:
   - extract:
       key: coder
   - extract:
       key: volsync-template
+  - extract:
+      key: cloudflare
