--- a/kubernetes/apps/downloads/coder/app/externalsecret.yaml
+++ b/kubernetes/apps/downloads/coder/app/externalsecret.yaml
@@ -41,6 +41,7 @@ spec:
         CLOUDFLARE_AWS_ACCESS_KEY_ID: "{{ .CLOUDFLARE_AWS_ACCESS_KEY_ID }}"
         CLOUDFLARE_AWS_SECRET_ACCESS_KEY: "{{ .CLOUDFLARE_AWS_SECRET_ACCESS_KEY }}"
         CLOUDFLARE_RESTIC_REPO: "{{ .CLOUDFLARE_RESTIC_REPO }}"
+        CLOUDFLARE_API_TOKEN: "{{ .CLOUDFLARE_API_TOKEN }}"
   dataFrom:
   - extract:
       key: coder
