Enable multiple mds for ceph

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -280,7 +280,7 @@ spec:
             codingChunks: 2
         metadataServer:
           activeCount: 1
-          activeStandby: false
+          activeStandby: true
           priorityClassName: system-cluster-critical
           placement:
             topologySpreadConstraints:
