--- a/kubernetes/apps/downloads/radarr/app/kustomization.yaml
+++ b/kubernetes/apps/downloads/radarr/app/kustomization.yaml
@@ -3,8 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./secret.sops.yaml
-  - ./pvc.yaml
+  - ./externalsecret.yaml
   - ../../../../components/cephfs-mounts/backup.yaml
   - ../../../../components/cephfs-mounts/downloads-folder.yaml
   - ../../../../components/cephfs-mounts/movies-folder.yaml
