--- a/kubernetes/apps/downloads/maintainerr/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/maintainerr/app/helmrelease.yaml
@@ -34,8 +34,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/jorenn92/maintainerr
-              tag: 2.19.0
+              repository: ghcr.io/maintainerr/maintainerr
+              tag: 2.26.1
               pullPolicy: IfNotPresent
             env:
               TZ: America/Los_Angeles
