[fix] Coder Mount
Mount the entire backup folder since this is a debug environment

--- a/kubernetes/apps/downloads/coder/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/coder/app/helmrelease.yaml
@@ -193,9 +193,9 @@ spec:
             - path: "/home/coder/.talos"
               readOnly: true
       # CephFS folder mounts
-      backup:
+      backup-main-folder:
         enabled: true
-        existingClaim: ceph-filesystem-${APP}-backups
+        existingClaim: ceph-filesystem-${APP}-backups-main-folder
         advancedMounts:
           coder:
             app:
