--- a/kubernetes/apps/downloads/coder/app/kustomization.yaml
+++ b/kubernetes/apps/downloads/coder/app/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../../../components/cephfs-mounts/backup.yaml
+- ../../../../components/cephfs-mounts/backup-main-folder.yaml
 - ../../../../components/cephfs-mounts/downloads-folder.yaml
 - ../../../../components/cephfs-mounts/movies-folder.yaml
 - ../../../../components/cephfs-mounts/music-folder.yaml
