[fix] Maintainerr volsync

--- a/kubernetes/apps/downloads/maintainerr/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/maintainerr/app/helmrelease.yaml
@@ -86,7 +86,7 @@ spec:
         advancedMounts:
           maintainerr:
             app:
-            - path: /config/backup
+            - path: /mnt/backup
 
     route:
       app:
