Give me access to cert manager listing objects

--- a/kubernetes/apps/downloads/coder/app/rbac.yaml
+++ b/kubernetes/apps/downloads/coder/app/rbac.yaml
@@ -81,3 +81,7 @@ rules:
   - apiGroups: ["policy"]
     resources: ["poddisruptionbudgets"]
     verbs: ["get", "list", "watch", "create", "update", "delete"]
+  # Cert Manager
+  - apiGroups: ["cert-manager.io"]
+    resources: ["certificaterequests"]
+    verbs: ["list", "get", "watch"]
